--- a/DScaler/DScalerRes/DScalerRes.rc
+++ b/DScaler/DScalerRes/DScalerRes.rc
@@ -428,13 +428,13 @@ BEGIN
     LTEXT           "Volume:",IDC_STATIC,11,53,40,8
 END
 
-IDD_VTSTATUS DIALOG DISCARDABLE  22, 17, 162, 90
+IDD_VTSTATUS DIALOG DISCARDABLE  22, 17, 162, 148
 STYLE DS_MODALFRAME | DS_SETFOREGROUND | DS_3DLOOK | WS_VISIBLE | WS_CAPTION | 
     WS_SYSMENU
 CAPTION "DScaler Teletext Info"
 FONT 8, "MS Sans Serif"
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,55,71,50,15
+    DEFPUSHBUTTON   "OK",IDOK,55,126,50,15
     LTEXT           "Current Page Subcode",IDC_STATIC,9,49,89,10
     EDITTEXT        IDC_TEXT3,105,48,45,12,ES_RIGHT | ES_AUTOHSCROLL | 
                     ES_READONLY
@@ -445,6 +445,13 @@ BEGIN
     EDITTEXT        IDC_TEXT2,105,34,45,12,ES_RIGHT | ES_AUTOHSCROLL | 
                     ES_READONLY
     GROUPBOX        "Teletext Cache State",IDC_STATIC,5,4,150,62
+    GROUPBOX        "Teletext Channel Identification",IDC_STATIC,5,71,150,48
+    LTEXT           "Network ID Code (P8/30/1)",IDC_STATIC,10,87,91,10
+    EDITTEXT        IDC_TEXT4,105,85,45,12,ES_RIGHT | ES_AUTOHSCROLL | 
+                    ES_READONLY
+    LTEXT           "PDC CNI (P8/30/2)",IDC_STATIC,10,102,91,10
+    EDITTEXT        IDC_TEXT5,105,100,45,12,ES_RIGHT | ES_AUTOHSCROLL | 
+                    ES_READONLY
 END
 
 IDD_VPSSTATUS DIALOG DISCARDABLE  22, 17, 187, 66
