VPS Info Dialog improved

--- a/DScaler/DScalerRes/DScalerRes.rc
+++ b/DScaler/DScalerRes/DScalerRes.rc
@@ -454,33 +454,36 @@ BEGIN
                     ES_READONLY
 END
 
-IDD_VPSSTATUS DIALOG DISCARDABLE  22, 17, 147, 151
+IDD_VPSSTATUS DIALOG DISCARDABLE  22, 17, 147, 191
 STYLE DS_MODALFRAME | DS_SETFOREGROUND | DS_3DLOOK | WS_VISIBLE | WS_CAPTION | 
     WS_SYSMENU
 CAPTION "DScaler VPS Info"
 FONT 8, "MS Sans Serif"
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,48,135,50,15
-    GROUPBOX        "VPS-Identifier",IDC_STATIC,5,5,135,45
-    EDITTEXT        IDC_VPS_NAME,50,15,85,12,ES_RIGHT | ES_AUTOHSCROLL | 
+    DEFPUSHBUTTON   "OK",IDOK,45,170,50,15
+    GROUPBOX        "VPS-Identifier",IDC_STATIC,5,35,135,45
+    EDITTEXT        IDC_VPS_NAME,50,45,85,12,ES_RIGHT | ES_AUTOHSCROLL | 
                     ES_READONLY
-    LTEXT           "CNI",IDC_STATIC,15,30,60,12,SS_CENTERIMAGE
-    LTEXT           "Label",IDC_STATIC,15,65,30,12,SS_CENTERIMAGE
-    LTEXT           "Name",IDC_STATIC,15,15,30,12,SS_CENTERIMAGE
-    EDITTEXT        IDC_VPS_CNI,90,30,45,12,ES_RIGHT | ES_AUTOHSCROLL | 
+    LTEXT           "CNI",IDC_STATIC,15,60,60,12,SS_CENTERIMAGE
+    LTEXT           "Label",IDC_STATIC,15,95,30,12,SS_CENTERIMAGE
+    LTEXT           "Name",IDC_STATIC,15,45,30,12,SS_CENTERIMAGE
+    EDITTEXT        IDC_VPS_CNI,90,60,45,12,ES_RIGHT | ES_AUTOHSCROLL | 
                     ES_READONLY
-    GROUPBOX        "Other Info",IDC_STATIC,5,55,135,75
-    EDITTEXT        IDC_VPS_LABEL,50,65,85,12,ES_RIGHT | ES_AUTOHSCROLL | 
+    GROUPBOX        "Other Info",IDC_STATIC,5,85,135,80
+    EDITTEXT        IDC_VPS_LABEL,50,95,85,12,ES_RIGHT | ES_AUTOHSCROLL | 
                     ES_READONLY
-    LTEXT           "Day.Month",IDC_STATIC,15,80,60,12,SS_CENTERIMAGE
-    LTEXT           "Hour:Minute",IDC_STATIC,15,95,60,12,SS_CENTERIMAGE
-    EDITTEXT        IDC_VPS_MONTH,90,80,45,12,ES_RIGHT | ES_AUTOHSCROLL | 
+    LTEXT           "Day.Month",IDC_STATIC,15,110,60,12,SS_CENTERIMAGE
+    LTEXT           "Hour:Minute",IDC_STATIC,15,125,60,12,SS_CENTERIMAGE
+    EDITTEXT        IDC_VPS_MONTH,90,110,45,12,ES_RIGHT | ES_AUTOHSCROLL | 
                     ES_READONLY
-    EDITTEXT        IDC_VPS_TIME,90,95,45,12,ES_RIGHT | ES_AUTOHSCROLL | 
+    EDITTEXT        IDC_VPS_TIME,90,125,45,12,ES_RIGHT | ES_AUTOHSCROLL | 
                     ES_READONLY
-    EDITTEXT        IDC_VPS_STATUS,90,110,45,12,ES_RIGHT | ES_AUTOHSCROLL | 
+    EDITTEXT        IDC_VPS_STATUS,10,11,125,12,ES_CENTER | ES_AUTOHSCROLL | 
+                    ES_READONLY | NOT WS_BORDER
+    GROUPBOX        "Status",IDC_STATIC,5,2,135,25
+    LTEXT           "Audio",IDC_STATIC,15,140,60,12,SS_CENTERIMAGE
+    EDITTEXT        IDC_VPS_AUDIO,90,140,45,12,ES_RIGHT | ES_AUTOHSCROLL | 
                     ES_READONLY
-    LTEXT           "Status",IDC_STATIC,15,110,60,12,SS_CENTERIMAGE
 END
 
 IDD_MIXERSETUP DIALOG DISCARDABLE  22, 17, 301, 294
