--- a/DScaler/DScalerRes/DScalerRes.rc
+++ b/DScaler/DScalerRes/DScalerRes.rc
@@ -454,36 +454,41 @@ BEGIN
                     ES_READONLY
 END
 
-IDD_VPSSTATUS DIALOG DISCARDABLE  22, 17, 147, 191
+IDD_VPSSTATUS DIALOG DISCARDABLE  22, 17, 147, 226
 STYLE DS_MODALFRAME | DS_SETFOREGROUND | DS_3DLOOK | WS_VISIBLE | WS_CAPTION | 
     WS_SYSMENU
 CAPTION "DScaler VPS Info"
 FONT 8, "MS Sans Serif"
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,45,170,50,15
-    GROUPBOX        "VPS-Identifier",IDC_STATIC,5,35,135,45
-    EDITTEXT        IDC_VPS_NAME,50,45,85,12,ES_RIGHT | ES_AUTOHSCROLL | 
+    GROUPBOX        "VPS-Identifier",IDC_STATIC,5,5,135,45
+    LTEXT           "Name",IDC_STATIC,15,15,30,12,SS_CENTERIMAGE
+    EDITTEXT        IDC_VPS_NAME,50,15,85,12,ES_RIGHT | ES_AUTOHSCROLL | 
                     ES_READONLY
-    LTEXT           "CNI",IDC_STATIC,15,60,60,12,SS_CENTERIMAGE
-    LTEXT           "Label",IDC_STATIC,15,95,30,12,SS_CENTERIMAGE
-    LTEXT           "Name",IDC_STATIC,15,45,30,12,SS_CENTERIMAGE
-    EDITTEXT        IDC_VPS_CNI,90,60,45,12,ES_RIGHT | ES_AUTOHSCROLL | 
+    LTEXT           "CNI",IDC_STATIC,15,30,60,12,SS_CENTERIMAGE
+    EDITTEXT        IDC_VPS_CNI,90,30,45,12,ES_RIGHT | ES_AUTOHSCROLL | 
                     ES_READONLY
-    GROUPBOX        "Other Info",IDC_STATIC,5,85,135,80
-    EDITTEXT        IDC_VPS_LABEL,50,95,85,12,ES_RIGHT | ES_AUTOHSCROLL | 
+    GROUPBOX        "PIL",IDC_STATIC,5,55,135,45
+    LTEXT           "Day.Month",IDC_STATIC,15,65,60,12,SS_CENTERIMAGE
+    EDITTEXT        IDC_VPS_MONTH,90,65,45,12,ES_RIGHT | ES_AUTOHSCROLL | 
                     ES_READONLY
-    LTEXT           "Day.Month",IDC_STATIC,15,110,60,12,SS_CENTERIMAGE
-    LTEXT           "Hour:Minute",IDC_STATIC,15,125,60,12,SS_CENTERIMAGE
-    EDITTEXT        IDC_VPS_MONTH,90,110,45,12,ES_RIGHT | ES_AUTOHSCROLL | 
+    LTEXT           "Hour:Minute",IDC_STATIC,15,80,60,12,SS_CENTERIMAGE
+    EDITTEXT        IDC_VPS_TIME,90,80,45,12,ES_RIGHT | ES_AUTOHSCROLL | 
                     ES_READONLY
-    EDITTEXT        IDC_VPS_TIME,90,125,45,12,ES_RIGHT | ES_AUTOHSCROLL | 
+    GROUPBOX        "PCS",IDC_STATIC,5,105,135,45
+    LTEXT           "Audio",IDC_STATIC,15,115,60,12,SS_CENTERIMAGE
+    EDITTEXT        IDC_VPS_AUDIO,90,115,45,12,ES_RIGHT | ES_AUTOHSCROLL | 
                     ES_READONLY
-    EDITTEXT        IDC_VPS_STATUS,10,11,125,12,ES_CENTER | ES_AUTOHSCROLL | 
-                    ES_READONLY | NOT WS_BORDER
-    GROUPBOX        "Status",IDC_STATIC,5,2,135,25
-    LTEXT           "Audio",IDC_STATIC,15,140,60,12,SS_CENTERIMAGE
-    EDITTEXT        IDC_VPS_AUDIO,90,140,45,12,ES_RIGHT | ES_AUTOHSCROLL | 
+    LTEXT           "Service Code",IDC_STATIC,15,130,60,12,SS_CENTERIMAGE
+    EDITTEXT        IDC_VPS_SERVICE,90,130,45,12,ES_RIGHT | ES_AUTOHSCROLL | 
                     ES_READONLY
+    GROUPBOX        "Other",IDC_STATIC,5,155,135,45
+    LTEXT           "Label",IDC_STATIC,15,165,30,12,SS_CENTERIMAGE
+    EDITTEXT        IDC_VPS_LABEL,50,165,85,12,ES_RIGHT | ES_AUTOHSCROLL | 
+                    ES_READONLY
+    LTEXT           "PTY",IDC_STATIC,15,180,30,12,SS_CENTERIMAGE
+    EDITTEXT        IDC_VPS_PTY,90,180,45,12,ES_RIGHT | ES_AUTOHSCROLL | 
+                    ES_READONLY
+    DEFPUSHBUTTON   "OK",IDOK,48,205,50,15
 END
 
 IDD_MIXERSETUP DIALOG DISCARDABLE  22, 17, 301, 294
