Fixed: typo in tda8275 tuner. Thanks to Keld Damsbo.

--- a/DScaler/Release/CX2388xCards.ini
+++ b/DScaler/Release/CX2388xCards.ini
@@ -1,8 +1,11 @@
-; $Id: CX2388xCards.ini,v 1.7 2005-07-17 15:59:22 to_see Exp $
+; $Id: CX2388xCards.ini,v 1.8 2005-09-15 19:36:08 to_see Exp $
 ;
 ; CX2388x card list.
 ;
 ; $Log: not supported by cvs2svn $
+; Revision 1.7  2005/07/17 15:59:22  to_see
+; Added new tuner
+;
 ; Revision 1.6  2005/05/12 19:06:59  to_see
 ; Added some comments
 ;
@@ -603,7 +606,7 @@ UseTDA9887 ()
 ; lg_pal_tape				  56
 ; philips_fq1216ame_mk4		  57
 ; philips_fq1236a_mk4		  58
-; tda8275                     59
+; philips_tda8275             59
 ; ymec_tvf_8531mf             60
 ; ymec_tvf_5533mf             61
 ; tena_9533_di                62
