--- a/DScaler/Release/SAA713xCards.ini
+++ b/DScaler/Release/SAA713xCards.ini
@@ -1,4 +1,4 @@
-; $Id: SAA713xCards.ini,v 1.15 2005-07-17 15:59:22 to_see Exp $
+; $Id: SAA713xCards.ini,v 1.16 2005-09-15 19:36:08 to_see Exp $
 ;
 ; SAA713x card list.
 ;
@@ -1390,7 +1390,7 @@ Final ()
 ; lg_pal_tape				  56
 ; philips_fq1216ame_mk4		  57
 ; philips_fq1236a_mk4		  58
-; tda8275                     59
+; philips_tda8275             59
 ; ymec_tvf_8531mf             60
 ; ymec_tvf_5533mf             61
 ; tena_9533_di                62
