Added new card settings thanks Keld Damsbo

--- a/DScaler/Release/SAA713xCards.ini
+++ b/DScaler/Release/SAA713xCards.ini
@@ -1,4 +1,4 @@
-; $Id: SAA713xCards.ini,v 1.16 2005-09-15 19:36:08 to_see Exp $
+; $Id: SAA713xCards.ini,v 1.17 2005-09-27 16:09:20 to_see Exp $
 ;
 ; SAA713x card list.
 ;
@@ -1326,6 +1326,58 @@ Input ( "S-Video", svideo )
 
 Final ()
 	GPIOSet( 0x042000, 0x1ce700 )
+
+
+[Asus 7131D]
+;Thanks "Keld Damsbo" <keld@dam...>
+DeviceID = 0x7133
+DefaultTuner = philips_tda8275
+AudioCrystal = 32MHz
+GPIOMask = 0x0200000
+AutoDetectID = 0x48621043
+
+Input ( "Tuner", tuner )
+	VideoPin = 1
+	AudioPin = dac
+
+Input ( "Composite", composite )
+	VideoPin = 3
+	AudioPin = line2
+
+Input ( "S-Video", svideo )
+	VideoPin = 0
+	AudioPin = line2
+
+Input ( "CCIR656", ccir )
+	VideoPin = 2
+	AudioPin = line2
+
+Input ( "Radio", radio )
+	AudioPin = line2
+
+
+[ASUS TV-FM 7135 Silicon]
+;Thanks "Keld Damsbo" <keld@dam...>
+DeviceID = 0x7133
+DefaultTuner = philips_tda8275
+AudioCrystal = 32MHz
+AutoDetectID = 0x48451043
+UseTDA9887 = yes
+ 
+Input ( "Tuner", tuner )
+ VideoPin = 1
+ AudioPin = dac
+ 
+Input ( "Composite", composite )
+ VideoPin = 3
+ AudioPin = line2
+ 
+Input ( "S-Video", svideo )
+ VideoPin = 0
+ AudioPin = line2
+ 
+Input ( "Radio", radio )
+ AudioPin = line2
 
 
 ; ***** Tuner list: (as at July 2005) *****
