Added new Cards: Leadtek WinFast DV2000 and PVR2000 (from v4l2 - not tested)

--- a/DScaler/Release/CX2388xCards.ini
+++ b/DScaler/Release/CX2388xCards.ini
@@ -1,8 +1,11 @@
-; $Id: CX2388xCards.ini,v 1.8 2005-09-15 19:36:08 to_see Exp $
+; $Id: CX2388xCards.ini,v 1.9 2005-10-15 20:42:21 to_see Exp $
 ;
 ; CX2388x card list.
 ;
 ; $Log: not supported by cvs2svn $
+; Revision 1.8  2005/09/15 19:36:08  to_see
+; Fixed: typo in tda8275 tuner. Thanks to Keld Damsbo.
+;
 ; Revision 1.7  2005/07/17 15:59:22  to_see
 ; Added new tuner
 ;
@@ -542,6 +545,59 @@ Input ( "S-Video", svideo )
 	GPIOSet ( 0x0000e07f )
 
 UseTDA9887 ()
+
+
+[Leadtek WinFast DV2000]
+;from v4l2
+AutoDetectID = 0x6620107D
+DefaultTuner = philips_fmd1216me_mk3
+
+Input ( "Tuner", tuner)
+	MuxSelect = 0
+	GPIOSet ( 0x0035e700, 0x00003004, 0x0035e700, 0x02000000 )
+
+Input ( "Composite", composite )
+	MuxSelect = 1
+	GPIOSet ( 0x0035c700, 0x00003004, 0x0035c700, 0x02000000 )
+
+Input ( "S-Video", svideo )
+	MuxSelect = 2
+	GPIOSet ( 0x0035c700, 0x00003004, 0x0035c700, 0x02000000 )
+
+;TDA9887 settings not tested - just copied from Leadtek WinFast TV2000 XP Expert
+UseTDA9887 ()
+	SetModes ( pal-bg   ) = { OutputPort1 = active, OutputPort2 = active }
+	SetModes ( pal-i    ) = { OutputPort1 = active, OutputPort2 = active }
+	SetModes ( pal-dk   ) = { OutputPort1 = active, OutputPort2 = active }
+	SetModes ( ntsc-m   ) = { intercarrier, OutputPort1 = active }
+	SetModes ( secam-l  ) = { OutputPort2 = active }
+
+
+[Leadtek WinFast PVR2000]
+;from v4l2
+AutoDetectID = 0x663B107D, 0x663C107D,
+DefaultTuner = philips_fmd1216me_mk3
+
+Input ( "Tuner", tuner)
+	MuxSelect = 0
+	GPIOSet ( 0x0000bde2 )
+
+Input ( "Composite", composite )
+	MuxSelect = 1
+	GPIOSet ( 0x0000bde6 )
+
+Input ( "S-Video", svideo )
+	MuxSelect = 2
+	GPIOSet ( 0x0000bde6 )
+
+;TDA9887 settings not tested - just copied from Leadtek WinFast TV2000 XP Expert
+UseTDA9887 ()
+	SetModes ( pal-bg   ) = { OutputPort1 = active, OutputPort2 = active }
+	SetModes ( pal-i    ) = { OutputPort1 = active, OutputPort2 = active }
+	SetModes ( pal-dk   ) = { OutputPort1 = active, OutputPort2 = active }
+	SetModes ( ntsc-m   ) = { intercarrier, OutputPort1 = active }
+	SetModes ( secam-l  ) = { OutputPort2 = active }
+
 
 
 ; ***** Tuner list: (as at July 2005) *****
