Added new Cards from v4l2 - not tested

--- a/DScaler/Release/CX2388xCards.ini
+++ b/DScaler/Release/CX2388xCards.ini
@@ -1,8 +1,11 @@
-; $Id: CX2388xCards.ini,v 1.9 2005-10-15 20:42:21 to_see Exp $
+; $Id: CX2388xCards.ini,v 1.10 2005-10-30 21:26:30 to_see Exp $
 ;
 ; CX2388x card list.
 ;
 ; $Log: not supported by cvs2svn $
+; Revision 1.9  2005/10/15 20:42:21  to_see
+; Added new Cards: Leadtek WinFast DV2000 and PVR2000 (from v4l2 - not tested)
+;
 ; Revision 1.8  2005/09/15 19:36:08  to_see
 ; Fixed: typo in tda8275 tuner. Thanks to Keld Damsbo.
 ;
@@ -472,7 +475,7 @@ Input ( "S-Video", svideo )
 [AverTV Studio 303 (M126)]
 ;Thanks Zbigniew Pluta
 ;Thanks deky
-AutoDetectID = 0x000b1461
+AutoDetectID = 0x000b1461, 0x000a1461
 DefaultTuner = philips_fm1216me_mk3
 
 Input ( "Tuner", tuner)
@@ -597,6 +600,153 @@ UseTDA9887 ()
 	SetModes ( pal-dk   ) = { OutputPort1 = active, OutputPort2 = active }
 	SetModes ( ntsc-m   ) = { intercarrier, OutputPort1 = active }
 	SetModes ( secam-l  ) = { OutputPort2 = active }
+
+
+[Asus PVR-416]
+;from v4l2 - analog part only:
+;Blackbird PVR Card with HW MPEG Encoder
+AutoDetectID = 0x48231043
+DefaultTuner = philips_fm1236_mk3
+
+Input ( "Tuner", tuner)
+	MuxSelect = 0
+	GPIOSet ( 0x0000fde6 )
+
+Input ( "S-Video", svideo )
+	MuxSelect = 2
+	GPIOSet ( 0x0000fde6 ) ; 0x0000fda6 L,R RCA audio in?
+
+UseTDA9887 ()
+
+
+[K-World/VStream XPert DVB-T]
+;from v4l2 - analog part only:
+;DVB Card
+;TODO: reset code on GPIO's
+AutoDetectID = 0x08a617de
+DefaultTuner = absent
+
+Input ( "Composite", composite )
+	MuxSelect = 1
+	GPIOSet ( 0x00000700, 0x00000000, 0x00000101 )
+
+Input ( "S-Video", svideo )
+	MuxSelect = 2
+	GPIOSet ( 0x00000700, 0x00000000, 0x00000101 )
+
+
+[DViCO FusionHDTV DVB-T1]
+;from v4l2 - analog part only:
+;DVB Card
+;TODO: GPIO0:0 is hooked to mt352 reset pin
+AutoDetectID = 0xd81018ac
+DefaultTuner = absent
+
+Input ( "Tuner", tuner)
+	MuxSelect = 0
+	GPIOSet ( 0x0000fde6 )
+
+Input ( "Composite", composite )
+	MuxSelect = 1
+	GPIOSet ( 0x000027df )
+
+Input ( "S-Video", svideo )
+	MuxSelect = 2
+	GPIOSet ( 0x000027df )
+
+
+[K-World LTV883RF]
+;from v4l2
+;seems to have no eeprom
+;AutoDetectID =
+DefaultTuner = tnf_8831bgff
+
+Input ( "Tuner", tuner)
+	MuxSelect = 0
+	GPIOSet ( 0x000007f8 )
+
+;for debuging only
+Input ( "Tuner (Mono Audio)", tuner)
+	MuxSelect = 0
+	GPIOSet ( 0x000007f9 )
+
+Input ( "Composite", composite )
+	MuxSelect = 1
+	GPIOSet ( 0x000007fa )
+
+Input ( "S-Video", svideo )
+	MuxSelect = 2
+	GPIOSet ( 0x000007fa )
+
+
+[DViCO FusionHDTV 3 Gold-Q]
+;from v4l2 - analog part only:
+;DVB Card
+AutoDetectID = 0xd81018ac
+
+;TODO: Add new tuner
+;DefaultTuner = TUNER_MICROTUNE_4042FI5
+DefaultTuner = absent
+
+;TODO: Handle GPIO's:
+;GPIO[0] resets DT3302 DTV receiver
+;0 - reset asserted
+;1 - normal operation
+;GPIO[1] mutes analog audio output connector
+;0 - enable selected source
+;1 - mute
+;GPIO[2] selects source for analog audio output connector
+;0 - analog audio input connector on tab
+;1 - analog DAC output from CX23881 chip
+;GPIO[3] selects RF input connector on tuner module
+;0 - RF connector labeled CABLE
+;1 - RF connector labeled ANT
+;GPIO[4] selects high RF for QAM256 mode
+;0 - normal RF
+;1 - high RF
+
+Input ( "Tuner", tuner)
+	MuxSelect = 0
+	GPIOSet ( 0x00000f0d )
+
+;TODO
+;Input ( "Cable", cable)
+;	MuxSelect = 0
+;	GPIOSet ( 0x00000f05 )
+
+Input ( "Composite", composite )
+	MuxSelect = 1
+	GPIOSet ( 0x00000f00 )
+
+Input ( "S-Video", svideo )
+	MuxSelect = 2
+	GPIOSet ( 0x00000f00 )
+
+
+[Provideo PV259]
+;from v4l2 - analog part only:
+;Blackbird PVR Card with HW MPEG Encoder
+AutoDetectID = 0x25801540
+DefaultTuner = philips_multi
+
+Input ( "Tuner", tuner)
+	MuxSelect = 0
+
+
+[DViCO FusionHDTV DVB-T Plus]
+;from v4l2 - analog part only:
+;DVB Card
+;TODO: GPIO0:0 is hooked to mt352 reset pin
+AutoDetectID = 0xd81018ac
+DefaultTuner = absent ; No analog tuner
+
+Input ( "Composite", composite )
+	MuxSelect = 1
+	GPIOSet ( 0x000027df )
+
+Input ( "S-Video", svideo )
+	MuxSelect = 2
+	GPIOSet ( 0x000027df )
 
 
 
