--- a/DScaler/Release/SAA713xCards.ini
+++ b/DScaler/Release/SAA713xCards.ini
@@ -1,4 +1,4 @@
-; $Id: SAA713xCards.ini,v 1.17 2005-09-27 16:09:20 to_see Exp $
+; $Id: SAA713xCards.ini,v 1.18 2005-11-12 03:19:55 dosx86 Exp $
 ;
 ; SAA713x card list.
 ;
@@ -861,6 +861,29 @@ Final ()
 	AudioPin = dac
 	GPIOSet( 0x3000, 0x7000 )
 
+[Lifeview FlyTV Platinum Gold]
+DeviceID     = 0x7133
+DefaultTuner = philips_tda8275
+GPIOMask     = 0x0019E700
+AutoDetectID = 0x03045168
+
+Input ( "Tuner", tuner )
+    VideoPin = 1
+    AudioPin = dac
+    GPIOSet( 0x16400, 0x0019E700 )
+
+Input ( "Composite", composite )
+    VideoPin = 3
+    AudioPin = line2
+    GPIOSet( 0x16400, 0x0019E700 )
+
+Input ( "S-Video", svideo )
+    VideoPin = 0
+    AudioPin = line2
+    GPIOSet( 0x16400, 0x0019E700 )
+
+Final ()
+    GPIOSet( 0x16400, 0x0019E700 )
 
 [Lifeview FlyTV Platinum (no audio)]
 ;Thanks "Chousw" <chousw@ms...>
