Added new Card: 10Moon TVBaby3

--- a/DScaler/Release/CX2388xCards.ini
+++ b/DScaler/Release/CX2388xCards.ini
@@ -1,8 +1,11 @@
-; $Id: CX2388xCards.ini,v 1.10 2005-10-30 21:26:30 to_see Exp $
+; $Id: CX2388xCards.ini,v 1.11 2005-11-14 18:38:36 to_see Exp $
 ;
 ; CX2388x card list.
 ;
 ; $Log: not supported by cvs2svn $
+; Revision 1.10  2005/10/30 21:26:30  to_see
+; Added new Cards from v4l2 - not tested
+;
 ; Revision 1.9  2005/10/15 20:42:21  to_see
 ; Added new Cards: Leadtek WinFast DV2000 and PVR2000 (from v4l2 - not tested)
 ;
@@ -747,6 +750,24 @@ Input ( "Composite", composite )
 Input ( "S-Video", svideo )
 	MuxSelect = 2
 	GPIOSet ( 0x000027df )
+
+
+[10Moon TVBaby3]
+;Thanks Allan Zhou
+AutoDetectID = 0x35041131
+DefaultTuner = lg_tapcnew_pal
+
+Input ( "Tuner", tuner)
+	MuxSelect = 0
+	GPIOSet ( 0x00ff8fff, 0x00007000, 0x00ff8fff, 0x02000000 )
+
+Input ( "Composite", composite )
+	MuxSelect = 1
+	GPIOSet ( 0x00ffafff, 0x00007000, 0x00ffafff, 0x02000000 )
+
+Input ( "S-Video", svideo )
+	MuxSelect = 2
+	GPIOSet ( 0x00ffafff, 0x00007000, 0x00ffafff, 0x02000000 )
 
 
 
